cmake_minimum_required(VERSION 3.23)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__ main.cpp)
add_executable(zad2.1 AUDITORISKI/AV2/zad2.1.cpp)
add_executable(zad2.2 AUDITORISKI/AV2/zad2.2.cpp)
add_executable(zad2.3 AUDITORISKI/AV2/zad2.3.cpp)
add_executable(example AUDITORISKI/AV3/example.cpp)
add_executable(zad3.1 AUDITORISKI/AV3/zad3.1.cpp)
add_executable(zad3.2 AUDITORISKI/AV3/zad3.2.cpp)
add_executable(zad3.3 AUDITORISKI/AV3/zad3.3.cpp)
add_executable(zad4.1 AUDITORISKI/AV4/zad4.1.cpp)
add_executable(zad5.1 AUDITORISKI/AV5/zad5.1.cpp)
add_executable(zad5.2 AUDITORISKI/AV5/zad5.2.cpp)
add_executable(zad5.3 AUDITORISKI/AV5/zad5.3.cpp)
add_executable(zad6.1 AUDITORISKI/AV6/zad6.1.cpp)
add_executable(zad6.2 AUDITORISKI/AV6/zad6.2.cpp)
add_executable(zad6.3 AUDITORISKI/AV6/zad6.3.cpp)
add_executable(zad7.1 AUDITORISKI/AV7/zad7.1.cpp)
add_executable(zad7.2 AUDITORISKI/AV7/zad7.2.cpp)
add_executable(zad7.3 AUDITORISKI/AV7/zad7.3.cpp)
add_executable(zad7.4 AUDITORISKI/AV7/zad7.4.cpp)
add_executable(zad7.5 AUDITORISKI/AV7/zad7.5.cpp)
add_executable(zad7.6 AUDITORISKI/AV7/zad7.6.cpp)
add_executable(zad8.1 AUDITORISKI/AV8/zad8.1.cpp)
add_executable(zad8.2 AUDITORISKI/AV8/zad8.2.cpp)
add_executable(zad8.3 AUDITORISKI/AV8/zad8.3.cpp)
add_executable(zad8.4 AUDITORISKI/AV8/zad8.4.cpp)
add_executable(zad8.5 AUDITORISKI/AV8/zad8.5.cpp)
add_executable(zad9.1 AUDITORISKI/AV9/zad9.1.cpp)
add_executable(zad9.2 AUDITORISKI/AV9/zad9.2.cpp)
add_executable(zad9.3 AUDITORISKI/AV9/zad9.3.cpp)
add_executable(zad9.4 AUDITORISKI/AV9/zad9.4.cpp)
add_executable(zad9.5 AUDITORISKI/AV9/zad9.5.cpp)
add_executable(zad10.1 AUDITORISKI/AV10/zad10.1.cpp)
add_executable(zad10.2 AUDITORISKI/AV10/zad10.2.cpp)
add_executable(zad10.3 AUDITORISKI/AV10/zad10.3.cpp)
add_executable(zad11.1 AUDITORISKI/AV11/zad11.1.cpp)
add_executable(zad11.2 AUDITORISKI/AV11/zad11.2.cpp)
add_executable(zad11.3 AUDITORISKI/AV11/zad11.3.cpp)
add_executable(zad11.4 AUDITORISKI/AV11/zad11.4.cpp)

add_executable(lab1.1 LABS/LAB1/lab1.1.c)
add_executable(lab1.2 LABS/LAB1/lab1.2.c)
add_executable(lab2.1 LABS/LAB2/lab2.1.cpp)
add_executable(lab2.2 LABS/LAB2/lab2.2.cpp)
add_executable(lab2.3 LABS/LAB2/lab2.3.cpp)
add_executable(lab3.1 LABS/LAB3/lab3.1.cpp)
add_executable(lab3.2 LABS/LAB3/lab3.2.cpp)
add_executable(lab3.3 LABS/LAB3/lab3.3.cpp)
add_executable(lab4.1 LABS/LAB4/lab4.1.cpp)
add_executable(lab4.2 LABS/LAB4/lab4.2.cpp)
add_executable(lab6.1 LABS/LAB6/lab6.1.cpp)
add_executable(lab6.2 LABS/LAB6/lab6.2.cpp)
add_executable(lab7.1 LABS/LAB7/lab7.1.cpp)
add_executable(lab7.2 LABS/LAB7/lab7.2.cpp)
add_executable(lab7.3 LABS/LAB7/lab7.3.cpp)
add_executable(lab7.4 LABS/LAB7/lab7.4.cpp)
add_executable(lab8.1 LABS/LAB8/lab8.1.cpp)
add_executable(lab8.2 LABS/LAB8/lab8.2.cpp)
add_executable(lab9.1 LABS/LAB9/lab9.1.cpp)
add_executable(lab9.2 LABS/LAB9/lab9.2.cpp)
add_executable(lab9.3 LABS/LAB9/lab9.3.cpp)
add_executable(lab10.1 LABS/LAB10/lab10.1.cpp)
add_executable(lab10.2 LABS/LAB10/lab10.2.cpp)

add_executable(labtest LABS/LAB1/labtest.cpp)
add_executable(kolokviumska1 AUDITORISKI/AV2/kolokviumska1.c)
add_executable(kolokviumska2 AUDITORISKI/AV2/kolokviumska2.c)


add_executable(drzava AUDITORISKI/AV2/drzava.c)
add_executable(kolokviumska1_7 PRV_KOLOKVIUM/kolokviumska1_7.c)
add_executable(kolokviumska1_8 PRV_KOLOKVIUM/kolokviumska1_8.c)
add_executable(kolokviumska1_9 PRV_KOLOKVIUM/kolokviumska1_9.cpp)
add_executable(kolokviumska1_10 PRV_KOLOKVIUM/kolokviumska1_10.cpp)
add_executable(kolokviumska1_15 PRV_KOLOKVIUM/kolokviumska1_15.c)
add_executable(kolokviumska1_1 PRV_KOLOKVIUM/kolokviumska1_1.cpp)
add_executable(kolokviumska1_2 PRV_KOLOKVIUM/kolokviumska1_2.cpp)
add_executable(kolokviumska1_3 PRV_KOLOKVIUM/kolokviumska1_3.cpp)
add_executable(kolokviumska1_4 PRV_KOLOKVIUM/kolokviumska1_4.cpp)
add_executable(kolokviumska1_5 PRV_KOLOKVIUM/kolokviumska1_5.cpp)
add_executable(kolokviumska1_6 PRV_KOLOKVIUM/kolokviumska1_6.cpp)
add_executable(kolokviumska1_11 PRV_KOLOKVIUM/kolokviumska1_11.cpp)
add_executable(kolokviumska1_12 PRV_KOLOKVIUM/kolokviumska1_12.cpp)
add_executable(kolokviumska1_13 PRV_KOLOKVIUM/kolokviumska1_13.cpp)
add_executable(kolokviumska1_14 PRV_KOLOKVIUM/kolokviumska1_14.cpp)
add_executable(kolokviumska1_20 PRV_KOLOKVIUM/kolokviumska1_20.c)
add_executable(kolokviumska1_22 PRV_KOLOKVIUM/kolokviumska1_22.c)
add_executable(kolokviumska1_21 PRV_KOLOKVIUM/kolokviumska21.cpp)
add_executable(kolokviumska1_17 PRV_KOLOKVIUM/kolokviumska1_17.cpp)
add_executable(kolokviumska1_19 PRV_KOLOKVIUM/kolokviumska1_19.cpp)
add_executable(kolokviumska2_1 VTOR_KOLOKVIUM/kolokviumska2_1.cpp)
add_executable(kolokviumska2_2 VTOR_KOLOKVIUM/kolokviumska2_2.cpp)
add_executable(kolokviumska2_3 VTOR_KOLOKVIUM/kolokviumska2_3.cpp)
add_executable(kolokviumska2_4 VTOR_KOLOKVIUM/kolokviumska2_4.cpp)
add_executable(kolokviumska2_5 VTOR_KOLOKVIUM/kolokviumska2_5.cpp)
add_executable(kolokviumska2_6 VTOR_KOLOKVIUM/kolokviumska2_6.cpp)
add_executable(kolokviumska2_7 VTOR_KOLOKVIUM/kolokviumska2_7.cpp)
add_executable(kolokviumska2_8 VTOR_KOLOKVIUM/kolokviumska2_8.cpp)
add_executable(kolokviumska2_9 VTOR_KOLOKVIUM/kolokviumska2_9.cpp)
add_executable(kolokviumska2_10 VTOR_KOLOKVIUM/kolokviumska2_10.cpp)
add_executable(kolokviumska2_11 VTOR_KOLOKVIUM/kolokviumska2_11.cpp)
add_executable(kolokviumska2_12 VTOR_KOLOKVIUM/kolokviumska2_12.cpp)
add_executable(kolokviumska2_13 VTOR_KOLOKVIUM/kolokviumska2_13.cpp)
add_executable(kolokviumska2_14 VTOR_KOLOKVIUM/kolokviumska2_14.cpp)
add_executable(kolokviumska2_15 VTOR_KOLOKVIUM/kolokviumska2_15.cpp)
add_executable(kolokviumska2_16 VTOR_KOLOKVIUM/kolokviumska2_16.cpp)
add_executable(kolokviumska2_17 VTOR_KOLOKVIUM/kolokviumska2_17.cpp)
add_executable(kolokviumska2_30 VTOR_KOLOKVIUM/kolokviumska2_30.cpp)
add_executable(kolokviumska2_31 VTOR_KOLOKVIUM/kolokviumska2_31.cpp)
add_executable(test VTOR_KOLOKVIUM/test.cpp)
